--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/lasse1511/testbonner123#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "ejs": "^2.7.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   }
 }
